Songdata: update bromide song metadata

--- a/resources/songdata.yaml
+++ b/resources/songdata.yaml
@@ -150,35 +150,35 @@ d2aa6c99e7c8a330aff11dc5c4962635:
   type: adx
   filename: C040
 8b129ab86b3cb2af351f552e77e19cdc:
-  title: Lucia's theme (short) ???
+  title: Bromide - Lucia and Hiro
   type: adx
   filename: C041
 1a7e93dd6508a78ca2e155d8f86b12e4:
-  title: ???
+  title: Bromide - Lucia
   type: adx
   filename: C042
 b3b551a8911ff252fc1610ea301b1fa8:
-  title: Mystere's theme (short) ???
+  title: Bromide - Mystere and Mauri
   type: adx
   filename: C043
 9685ebe850a153f4fb907dc138b67bf4:
-  title: Nall's theme (short) ???
+  title: Bromide - Nall
   type: adx
   filename: C044
 61dec54f6dea1ce1a5649dc642b94289:
-  title: ???
+  title: Bromide - Mauri and Ghaleon
   type: adx
   filename: C045
 e7df009f6141a63a99c0db21baa7f95b:
-  title: Lemina's theme (short) ???
+  title: Bromide - Lemina
   type: adx
   filename: C046
 5c514d05fd1d11c77212915371ea6deb:
-  title: Jean's theme (short) ???
+  title: Bromide - Jean
   type: adx
   filename: C047
 de23eb426d481018b5a164f74249b56b:
-  title: ???
+  title: Bromide - Silver Star Story
   type: adx
   filename: C048
 8e3aa49ba6c4f5f568386b00063b5a06:
