Songdata: update unknown SFX track

--- a/resources/songdata.yaml
+++ b/resources/songdata.yaml
@@ -182,7 +182,7 @@ de23eb426d481018b5a164f74249b56b:
   type: adx
   filename: C048
 8e3aa49ba6c4f5f568386b00063b5a06:
-  title: ???
+  title: Blue Spire Transmission Room
   type: adx
   filename: C049
 453d1e038405f7c70eec3cc4eaf8b342:
